Refactoring code for submission